Fix focus outline appearing on focused object if not focus-visible - (mouse hover over something that shouldn't be focused-visible)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -78,6 +78,9 @@ input[type="checkbox"]:checked::before {
 
 * {
   box-sizing: border-box;
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 }
 
 
